# tableplus-macos-update-creds

./: LICENSE  README.md  pyproject.toml
examples/: update_tableplus_creds.py
src/tableplus_macos_update_creds/: __init__.py  get_teamid.py  update_creds.py  update_password_in_keychain.py
